--- a/lib/workpermit_web/templates/layout/app.html.eex
+++ b/lib/workpermit_web/templates/layout/app.html.eex
@@ -4,21 +4,33 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Workpermit · Phoenix Framework</title>
-    <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>"/>
+    <title><%= gettext("Workpermit") %></title>
+    <link rel="stylesheet" href="<%=Routes.static_path(@conn, "/css/app.css") %>"/>
   </head>
   <body>
     <header>
       <section class="container">
         <nav role="navigation">
           <%= if signed_in?(@conn) do %>
-            <%= link "Sign out", to: session_path(@conn, :delete), method: :delete %>
+            <%= link gettext("Sign out"), to: Routes.session_path(@conn, :delete), method: :delete %>
           <% else %>
-            <%= link "Log in", to: session_path(@conn, :create) %>
-            <%= link "Sign up", to: user_path(@conn, :new) %>
+            <%= link gettext("Log in"), to: Routes.session_path(@conn, :create) %>
+            <%= link gettext("Sign up"), to: Routes.user_path(@conn, :new) %>
           <% end %>
         </nav>
       </section>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-globe"></i> I18n<span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li class="<%= get_active_locale_class("en") %>">
+            <a href="?locale=en">English</a>
+          </li>
+          <li class="<%= get_active_locale_class("fr") %>">
+            <a href="?locale=pl">Polski</a>
+          </li>
+        </ul>
+      </li>
+
     </header>
     <main role="main" class="container">
       <%= Enum.map(get_flash(@conn), fn {flash_key, flash_message} -> %>
@@ -26,6 +38,6 @@
       <% end) %>
       <%= render @view_module, @view_template, assigns %>
     </main>
-    <script type="text/javascript" src="<%= static_path(@conn, "/js/app.js") %>"></script>
+    <script type="text/javascript" src="<%=Routes.static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
