--- a/lib/workpermit_web/templates/session/new.html.eex
+++ b/lib/workpermit_web/templates/session/new.html.eex
@@ -1,5 +1,5 @@
 <h1>Sign in</h1>
-<%= form_for @conn, session_path(@conn, :create), [as: :session], fn f -> %>
+<%= form_for @conn, Routes.session_path(@conn, :create), [as: :session], fn f -> %>
   <%= label f, :email %>
   <%= text_input f, :email %>
   <%= error_tag f, :email %>
