--- a/lib/workpermit_web/templates/user/show.html.eex
+++ b/lib/workpermit_web/templates/user/show.html.eex
@@ -1,33 +1,28 @@
-<h1>Show User</h1>
+<h1><%= gettext("Show User") %></h1>
 
 <ul>
 
   <li>
-    <strong>Email:</strong>
+    <strong><%= gettext("Email") %>:</strong>
     <%= @user.email %>
   </li>
 
   <li>
-    <strong>Encrypted password:</strong>
-    <%= @user.password %>
-  </li>
-
-  <li>
-    <strong>First name:</strong>
+    <strong><%= gettext("First name") %>:</strong>
     <%= @user.first_name %>
   </li>
 
   <li>
-    <strong>Last name:</strong>
+    <strong><%= gettext("Last name") %>:</strong>
     <%= @user.last_name %>
   </li>
 
   <li>
-    <strong>Phone:</strong>
+    <strong><%= gettext("Phone") %>:</strong>
     <%= @user.phone %>
   </li>
 
 </ul>
 
-<span><%= link "Edit", to: user_path(@conn, :edit, @user) %></span>
-<span><%= link "Back", to: user_path(@conn, :index) %></span>
+<span><%= link gettext("Edit"), to: Routes.user_path(@conn, :edit, @user) %></span>
+<span><%= link gettext("Back"), to: Routes.user_path(@conn, :index) %></span>
