--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -21,7 +21,20 @@
 .active {
   @apply bg-gray-light;
 }
- 
+.invert {
+  -webkit-filter: invert(1);
+  filter: invert(1);
+}
+.gradient {
+  background: #1e130c;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #9a8478, #1e130c);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #9a8478, #1e130c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+.mirror {
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+}
+
 h1 {
   @apply text-2xl;
 }
