--- a/lib/workpermit_web/templates/page/index.html.eex
+++ b/lib/workpermit_web/templates/page/index.html.eex
@@ -14,7 +14,7 @@
     </div>
     <!--Right Col-->
     <div class="w-full md:w-3/5 py-6 text-center">
-      <%= img_tag(Routes.static_path(@conn, "/images/engineer.svg"), class: "w-full md:w-4/5 z-50 mirror") %>
+      <%= img_tag(Routes.static_path(@conn, "/images/engineer.svg"), class: "w-full md:w-4/5 mirror") %>
     </div>
   </div>
 </div>
