--- a/lib/workpermit_web/templates/page/index.html.eex
+++ b/lib/workpermit_web/templates/page/index.html.eex
@@ -34,7 +34,7 @@
   </svg>
 </div>
 <!-- section 1 -->
-<section class="bg-white border-b py-8">
+<section class="bg-white border-b py-8 bg-white">
   <div class="container max-w-5xl mx-auto m-8">
     <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-darker"><%= gettext("Tired of:") %></h1>
     <div class="w-full mb-4">	
