--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,3 +1,15 @@
+/* Define the "system" font family */
+@font-face {
+  font-family: system;
+  font-style: normal;
+  font-weight: 300;
+  src: local(".SFNSText-Light"), local(".HelveticaNeueDeskInterface-Light"), local(".LucidaGrandeUI"), local("Ubuntu Light"), local("Segoe UI Light"), local("Roboto-Light"), local("DroidSans"), local("Tahoma");
+}
+
+/* Now, let's apply it on an element */
+body {
+  font-family: "system";
+}
 
 /*@import "tailwindcss/base";*/
 @tailwind base;
@@ -29,8 +41,8 @@
 }
 .gradient {
   background: #1e130c;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #9a8478, #1e130c);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #9a8478, #1e130c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(to right,  #1e130c, #9a8478);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #1e130c, #9a8478); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 .mirror {
   -webkit-transform: scaleX(-1);
