--- a/lib/workpermit_web/templates/session/new.html.eex
+++ b/lib/workpermit_web/templates/session/new.html.eex
@@ -1,3 +1,4 @@
+<div class="w-full max-w-lg pt-16 mx-auto content-center flex-1">
 <h1 class="c-h3 p-5 text-gray-darker"><%= gettext("Sign In") %></h1>
 <%= form_for @conn, Routes.session_path(@conn, :create), [as: :session, class: "bg-white w-full shadow-md rounded px-8 pt-6 pb-8 mb-4"], fn f -> %>
 
@@ -18,4 +19,4 @@
     <%= submit gettext("Save"), class: "bg-primary-medium hover:bg-primary-darker text-white font-bold py-2 px-4 rounded" %>
   </div>
 <% end %>
-
+</div>
