--- a/lib/workpermit_web/templates/user/index.html.eex
+++ b/lib/workpermit_web/templates/user/index.html.eex
@@ -1,6 +1,6 @@
+<div class="w-full max-w-6xl pt-16 mx-auto content-center flex-1">
 <h1 class="c-h3 p-5 text-gray-darker"><%= gettext("User Profiles") %></h1>
-
-<table class = "bg-white w-full shadow-md rounded px-8 pt-6 pb-8 mb-4">
+<table class = "bg-white mx-auto w-full shadow-md rounded px-8 pt-6 pb-8 mb-4">
   <thead>
     <tr>
       <th><%= gettext("Email") %></th>
