--- a/lib/workpermit_web/templates/user/show.html.eex
+++ b/lib/workpermit_web/templates/user/show.html.eex
@@ -1,33 +1,34 @@
-<h1 class="c-h3 p-5 text-gray-darker"><%= gettext("User Profile") %></h1>
-
-<div class = "bg-white w-full shadow-md rounded px-8 pt-6 pb-8 mb-4">
-  <div class = "block mb-6 c-h5 text-gray-darker">
-    <span class="form-label block"><%= gettext("Email") %></span>
-    <p class = "form-input w-full mt-1">
-      <%= @user.email %>
-    </p>
-  </div>
-  <div class = "block mb-6 c-h5 text-gray-darker">
-    <span class="form-label block"><%= gettext("First name") %></span>
-    <p class = "form-input w-full mt-1">
-      <%= @user.first_name %>
-    </p>
-  </div>
-  <div class = "block mb-6 c-h5 text-gray-darker">
-    <span class="form-label block"><%= gettext("Last name") %></span>
-    <p class = "form-input w-full mt-1">
-      <%= @user.last_name %>
-    </p>
-  </div>
-  <div class = "block mb-6 c-h5 text-gray-darker">
-    <span class="form-label block"><%= gettext("Phone") %></span>
-    <p class = "form-input w-full mt-1">
-      <%= @user.phone %>
-    </p>
-  </div>
-  <div class="flex justify-between">
-    <%= link gettext("Back"), to: Routes.user_path(@conn, :index), class: "bg-transparent hover:bg-primary-light text-primary-medium font-semibold hover:text-white py-2 px-4 border border-primary-medium hover:border-transparent rounded" %>
-    <%= link gettext("Edit"), to: Routes.user_path(@conn, :edit, @user), class: "bg-primary-medium hover:bg-primary-darker text-white font-bold py-2 px-4 rounded" %>
+<div class="w-full max-w-lg pt-16 mx-auto content-center flex-1">
+  <h1 class="c-h3 p-5 text-gray-darker"><%= gettext("User Profile") %></h1>
+  <div class = "bg-white w-full shadow-md rounded px-8 pt-6 pb-8 mb-4">
+    <div class = "block mb-6 c-h5 text-gray-darker">
+      <span class="form-label block"><%= gettext("Email") %></span>
+      <p class = "form-input w-full mt-1">
+        <%= @user.email %>
+      </p>
+    </div>
+    <div class = "block mb-6 c-h5 text-gray-darker">
+      <span class="form-label block"><%= gettext("First name") %></span>
+      <p class = "form-input w-full mt-1">
+        <%= @user.first_name %>
+      </p>
+    </div>
+    <div class = "block mb-6 c-h5 text-gray-darker">
+      <span class="form-label block"><%= gettext("Last name") %></span>
+      <p class = "form-input w-full mt-1">
+        <%= @user.last_name %>
+      </p>
+    </div>
+    <div class = "block mb-6 c-h5 text-gray-darker">
+      <span class="form-label block"><%= gettext("Phone") %></span>
+      <p class = "form-input w-full mt-1">
+        <%= @user.phone %>
+      </p>
+    </div>
+    <div class="flex justify-between">
+      <%= link gettext("Back"), to: Routes.user_path(@conn, :index), class: "bg-transparent hover:bg-primary-light text-primary-medium font-semibold hover:text-white py-2 px-4 border border-primary-medium hover:border-transparent rounded" %>
+      <%= link gettext("Edit"), to: Routes.user_path(@conn, :edit, @user), class: "bg-primary-medium hover:bg-primary-darker text-white font-bold py-2 px-4 rounded" %>
+    </div>
   </div>
 </div>
 
