--- a/lib/workpermit_web/templates/user/index.html.eex
+++ b/lib/workpermit_web/templates/user/index.html.eex
@@ -1,37 +1,38 @@
 <div class="w-full max-w-6xl pt-16 mx-auto content-center flex-1">
-<h1 class="c-h3 p-5 text-gray-darker"><%= gettext("User Profiles") %></h1>
-<table class = "bg-white mx-auto w-full shadow-md rounded px-8 pt-6 pb-8 mb-4">
-  <thead>
-    <tr>
-      <th><%= gettext("Email") %></th>
-      <th><%= gettext("First name") %></th>
-      <th><%= gettext("Last name") %></th>
-      <th><%= gettext("Phone") %></th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-<%= for user <- @users do %>
-    <tr>
-      <td><%= user.email %></td>
-      <td><%= user.first_name %></td>
-      <td><%= user.last_name %></td>
-      <td><%= user.phone %></td>
+  <h1 class="c-h3 p-5 text-gray-darker"><%= gettext("User Profiles") %></h1>
+  <table class = "bg-white mx-auto w-full shadow-md rounded px-8 pt-6 pb-8 mb-4 table">
+    <thead>
+      <tr>
+        <th><%= gettext("Email") %></th>
+        <th><%= gettext("First name") %></th>
+        <th><%= gettext("Last name") %></th>
+        <th><%= gettext("Phone") %></th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <%= for user <- @users do %>
+        <tr>
+          <td><%= user.email %></td>
+          <td><%= user.first_name %></td>
+          <td><%= user.last_name %></td>
+          <td><%= user.phone %></td>
 
-      <td>
-        <i class="far fa-eye"></i>
-        <span><%= link gettext("Show"), to: Routes.user_path(@conn, :show, user) %></span>
-        <i class="far fa-edit"></i>
-        <span><%= link gettext("Edit"), to: Routes.user_path(@conn, :edit, user) %></span>
-        <i class="fas fa-trash-alt"></i>
-        <span><%= link gettext("Delete"), to: Routes.user_path(@conn, :delete, user), method: :delete, data: [confirm: "Are you sure?"] %></span>
-      </td>
-    </tr>
-<% end %>
-  </tbody>
-</table>
+          <td>
+            <i class="far fa-eye"></i>
+            <span><%= link gettext("Show"), to: Routes.user_path(@conn, :show, user) %></span>
+            <i class="far fa-edit"></i>
+            <span><%= link gettext("Edit"), to: Routes.user_path(@conn, :edit, user) %></span>
+            <i class="fas fa-trash-alt"></i>
+            <span><%= link gettext("Delete"), to: Routes.user_path(@conn, :delete, user), method: :delete, data: [confirm: "Are you sure?"] %></span>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
   <div class="flex justify-between">
     <%= link gettext("Back"), to: Routes.page_path(@conn, :index), class: "bg-transparent hover:bg-primary-light text-primary-medium font-semibold hover:text-white py-2 px-4 border border-primary-medium hover:border-transparent rounded" %>
     <%= link gettext("New user"), to: Routes.user_path(@conn, :new), class: "bg-primary-medium hover:bg-primary-darker text-white font-bold py-2 px-4 rounded" %>
   </div>
+ </div>
