--- a/lib/workpermit_web/templates/permit/form.html.eex
+++ b/lib/workpermit_web/templates/permit/form.html.eex
@@ -1,18 +1,31 @@
-<%= form_for @changeset, @action, fn f -> %>
+<%= form_for @changeset, @action, [id: "permitForm"], fn f -> %>
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
     </div>
   <% end %>
   <div>
+  <%= inputs_for f, :protective_equipment_value, fn p -> %>
+    <ul>
+      <%=  for box <- Map.keys(@pe) do %>
+        <li>
+          <%= checkbox p, box %>
+          <label for="<%= "#{:permit_protective_equipment_value_}#{box}" %>">
+            <%= img_tag( Workpermit.IsoSymbols.symbol_to_image_path(box)) %>
+          </label>
+          <%= error_tag p, box %>
+        </li>
+      <% end %>
+    </li>
+  <% end %>
     <div class="flex two four-500 six-800">
       <%= label f, :category %>
       <%= number_input f, :category %>
       <%= error_tag f, :category %>
 
-      <%= label f, :number %>
-      <%= number_input f, :number %>
-      <%= error_tag f, :number %>
+      <!-- %= label f, :number %>
+      < %= number_input f, :number %>
+      < %= error_tag f, :number %-->
     </div>
     <%= label f, :issued %>
     <%= error_tag f, :issued %>
@@ -58,4 +71,57 @@
     <%= submit "Save" %>
   </div>
 <% end %>
+ <form id="regForm" action="">
 
+<h1>Register:</h1>
+
+<!-- One "tab" for each step in the form: -->
+<!--div class="tab">Name:
+<ul>
+  <li><input type="checkbox" id="cb1" />
+    <label for="cb1"><img src="http://lorempixel.com/100/100" /></label>
+  </li>
+  <li><input type="checkbox" id="cb2" />
+    <label for="cb2"><img src="http://lorempixel.com/101/101" /></label>
+  </li>
+  <li><input type="checkbox" id="cb3" />
+    <label for="cb3"><img src="http://lorempixel.com/102/102" /></label>
+  </li>
+  <li><input type="checkbox" id="cb4" />
+    <label for="cb4"><img src="http://lorempixel.com/103/103" /></label>
+  </li>
+</ul>
+</div>
+
+<div class="tab">Contact Info:
+  <p><input placeholder="E-mail..." oninput="this.className = ''"></p>
+  <p><input placeholder="Phone..." oninput="this.className = ''"></p>
+</div>
+
+<div class="tab">Birthday:
+  <p><input placeholder="dd" oninput="this.className = ''"></p>
+  <p><input placeholder="mm" oninput="this.className = ''"></p>
+  <p><input placeholder="yyyy" oninput="this.className = ''"></p>
+</div>
+
+<div class="tab">Login Info:
+  <p><input placeholder="Username..." oninput="this.className = ''"></p>
+  <p><input placeholder="Password..." oninput="this.className = ''"></p>
+</div>
+
+<div style="overflow:auto;">
+  <div style="float:right;">
+    <button type="button" id="prevBtn">Previous</button>
+    <button type="button" id="nextBtn">Next</button>
+  </div>
+</div>
+
+<!-- Circles which indicates the steps of the form: -->
+<div style="text-align:center;margin-top:40px;">
+  <span class="step"></span>
+  <span class="step"></span>
+  <span class="step"></span>
+  <span class="step"></span>
+</div>
+
+</form> 
